--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,8 @@ button:focus {
     display: -webkit-flex;
     display: flex;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    position: relative; }
     .footer__search input {
       height: 56px;
       background-color: transparent;
@@ -191,6 +192,13 @@ button:focus {
       transition: 0.3s ease-in-out; }
       .footer__search button:hover {
         background-color: #c59d5f; }
+    .footer__search label.error {
+      position: absolute;
+      top: 55px;
+      left: 19px;
+      color: red;
+      font-size: 13px;
+      font-style: italic; }
   .footer__social {
     padding: 30px 0; }
     .footer__social svg {
