--- a/css/style.scss
+++ b/css/style.scss
@@ -45,6 +45,9 @@ button:focus {
 // for header
 .header {
   // header menu desktop
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
   #logo-home-1 {
     display: block;
   }
@@ -104,7 +107,9 @@ button:focus {
   top: 42px;
   left: 0;
   display: none;
+  padding: 20px 0 10px;
   background-color: #1e1e1ef2;
+  z-index: 2;
   li {
     width: 150px;
     a {
@@ -127,6 +132,7 @@ button:focus {
     font-size: 13px;
     a {
       color: #fff;
+      font-weight: 600;
     }
     &:hover {
       cursor: pointer;
@@ -163,6 +169,13 @@ button:focus {
       font-size: 18px;
       font-weight: 500;
     }
+    a {
+      color: #999;
+      @include transition();
+      &:hover {
+        color: $hover-color;
+      }
+    }
   }
   &__contact-icon {
     svg {
@@ -180,7 +193,7 @@ button:focus {
       font-weight: 700;
     }
     p {
-      padding: 30px 0 50px;
+      padding: 5px 0 50px;
       font-size: 14px;
     }
     &__icon {
@@ -220,9 +233,10 @@ button:focus {
     }
     label.error {
       position: absolute;
-      top: 55px;
-      left: 19px;
+      top: 50%;
+      left: 50%;
       @include error-validate();
+      transform: translate(-50%, 100%);
     }
   }
   &__social {
@@ -238,5 +252,8 @@ button:focus {
         color: $hover-color;
       }
     }
+  }
+  &__contact-icon {
+    padding-bottom: 40px;
   }
 }
