fix menu mobile

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,7 @@ body {
   color: #999;
   font-size: 15px;
   line-height: 27px;
-  font-weight: 400;
-  height: 2000px; }
+  font-weight: 400; }
 
 a {
   text-decoration: none; }
@@ -41,10 +40,15 @@ button:focus {
   position: fixed;
   width: 100%;
   z-index: 1000; }
-  .header #logo-home-1 {
+  .header #logo-home-1,
+  .header #logo-home-1-mobile {
     display: block; }
-  .header #logo-home-2 {
+  .header #logo-home-2,
+  .header #logo-home-2-mobile {
     display: none; }
+  .header #logo-home-1-mobile,
+  .header #logo-home-2-mobile {
+    height: 30px; }
   .header__menu {
     background-color: #ffb400; }
   .header__menu--desktop img {
@@ -144,11 +148,45 @@ button:focus {
   content: "\f054";
   font-family: "Font Awesome 5 Pro"; }
 
+.header__bar {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  padding: 5px 0;
+  justify-content: space-between;
+  align-items: center; }
+  .header__bar svg {
+    font-size: 30px; }
+
+.header__mobile {
+  background-color: #000;
+  width: 100vw;
+  position: absolute;
+  padding: 10px;
+  top: 40px;
+  left: -2000px;
+  transition: 0.5s; }
+  .header__mobile .menu_2nd,
+  .header__mobile .menu_3td {
+    display: none; }
+  .header__mobile .menu_2nd {
+    padding-left: 10px; }
+  .header__mobile .menu_3td {
+    padding-left: 20px; }
+
+.header__mobile-title {
+  text-align: center; }
+  .header__mobile-title p {
+    font-size: 20px;
+    border-bottom: 1px solid #c59d5f; }
+
 .footer {
   text-align: center;
   background-color: #333132; }
   .footer__main {
-    padding: 80px 0 30px; }
+    padding: 115px 0 30px; }
     .footer__main h2 {
       font-size: 18px;
       font-weight: 500; }
@@ -228,5 +266,40 @@ button:focus {
         color: #c59d5f; }
   .footer__contact-icon {
     padding-bottom: 40px; }
+
+.home-fresh {
+  background-image: url(../images/home/home-01.jpeg);
+  object-fit: cover;
+  height: 445px;
+  width: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; }
+  .home-fresh h1 {
+    font-size: 35px;
+    color: #fff; }
+  .home-fresh p {
+    font-size: 18px;
+    color: #fff;
+    margin: 20px 0 40px; }
+  .home-fresh button {
+    background-color: #ffb400;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out; }
+    .home-fresh button::after {
+      padding-left: 5px;
+      content: "\f178";
+      font-family: "Font Awesome 5 Pro"; }
+    .home-fresh button:hover {
+      opacity: 0.8; }
 
 /*# sourceMappingURL=style.css.map */
