--- a/css/style.scss
+++ b/css/style.scss
@@ -16,7 +16,6 @@ body {
   font-size: 15px;
   line-height: 27px;
   font-weight: 400;
-  height: 2000px;
 }
 a {
   text-decoration: none;
@@ -48,11 +47,17 @@ button:focus {
   position: fixed;
   width: 100%;
   z-index: 1000;
-  #logo-home-1 {
+  #logo-home-1,
+  #logo-home-1-mobile {
     display: block;
   }
-  #logo-home-2 {
+  #logo-home-2,
+  #logo-home-2-mobile {
     display: none;
+  }
+  #logo-home-1-mobile,
+  #logo-home-2-mobile {
+    height: 30px;
   }
   &__menu {
     background-color: $main-color;
@@ -159,12 +164,50 @@ button:focus {
   font-family: "Font Awesome 5 Pro";
 }
 
+// for menu tablet and mobile
+.header__bar {
+  @include d-flex();
+  padding: 5px 0;
+  justify-content: space-between;
+  align-items: center;
+  svg {
+    font-size: 30px;
+  }
+}
+
+.header__mobile {
+  background-color: #000;
+  width: 100vw;
+  position: absolute;
+  padding: 10px;
+  top: 40px;
+  left: -2000px;
+  transition: 0.5s;
+
+  .menu_2nd,
+  .menu_3td {
+    display: none;
+  }
+  .menu_2nd {
+    padding-left: 10px;
+  }
+  .menu_3td {
+    padding-left: 20px;
+  }
+}
+.header__mobile-title {
+  text-align: center;
+  p {
+    font-size: 20px;
+    border-bottom: 1px solid $hover-color;
+  }
+}
 // for footer
 .footer {
   text-align: center;
   background-color: #333132;
   &__main {
-    padding: 80px 0 30px;
+    padding: 115px 0 30px;
     h2 {
       font-size: 18px;
       font-weight: 500;
@@ -255,5 +298,39 @@ button:focus {
   }
   &__contact-icon {
     padding-bottom: 40px;
+  }
+}
+
+// fresh
+.home-fresh {
+  background-image: url(../images/home/home-01.jpeg);
+  object-fit: cover;
+  height: 445px;
+  width: 100%;
+  @include center();
+  flex-direction: column;
+  h1 {
+    font-size: 35px;
+    color: #fff;
+  }
+  p {
+    font-size: 18px;
+    color: #fff;
+    margin: 20px 0 40px;
+  }
+  button {
+    background-color: $main-color;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    @include transition();
+    &::after {
+      padding-left: 5px;
+      content: "\f178";
+      font-family: "Font Awesome 5 Pro";
+    }
+    &:hover {
+      opacity: 0.8;
+    }
   }
 }
