--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,10 @@ ul {
   list-style: none;
   margin-bottom: 0; }
 
-img:focus {
-  outline: none; }
+img {
+  width: 100%; }
+  img:focus {
+    outline: none; }
 
 p {
   margin-bottom: 0; }
@@ -37,150 +39,205 @@ button:focus {
   outline: none; }
 
 .header {
+  background-color: #ffb400;
   position: fixed;
+  top: 0;
   width: 100%;
   z-index: 1000; }
-  .header #logo-home-1,
-  .header #logo-home-1-mobile {
-    display: block; }
-  .header #logo-home-2,
-  .header #logo-home-2-mobile {
-    display: none; }
-  .header #logo-home-1-mobile,
-  .header #logo-home-2-mobile {
-    height: 30px; }
-  .header__menu {
-    background-color: #ffb400; }
-  .header__menu--desktop img {
-    height: 30px; }
-  .header__center {
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between; }
-  .header .menu__icon {
+  .header .header__logo img {
+    width: 70%; }
+  .header .header__flex {
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
     align-items: center;
-    color: #fff; }
-    .header .menu__icon svg {
-      font-size: 20px;
-      margin: 0 10px;
-      cursor: pointer; }
-  .header .menu__icon-cart {
-    position: relative; }
-    .header .menu__icon-cart a {
-      color: #fff; }
-  .header .menu__icon-count {
-    background-color: #fff;
-    height: 15px;
-    width: 15px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    border-radius: 50%;
-    text-align: center;
-    font-size: 12px;
-    color: #999;
-    position: absolute;
-    top: -4px;
-    left: 20px;
+    justify-content: space-between; }
+  .header__menu {
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-    justify-content: center;
     align-items: center; }
-
-.menu__flex {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  align-items: center; }
-
-.menu__list ul {
-  position: absolute;
-  top: 42px;
-  left: 0;
-  display: none;
-  padding: 20px 0 10px;
-  background-color: #1e1e1ef2;
-  z-index: 2; }
-  .menu__list ul li {
-    width: 150px; }
-    .menu__list ul li a {
-      color: #999; }
-
-.menu__list .menu_2nd-none:hover a {
-  color: #c59d5f; }
-.menu__list li {
-  float: left;
-  width: 100px;
-  line-height: 1.5em;
-  position: relative;
-  padding: 15px;
-  font-size: 13px; }
-  .menu__list li a {
+  .header__nav {
+    font-size: 26px;
+    padding: 15px 0;
     color: #fff;
-    font-weight: 600; }
-  .menu__list li:hover {
     cursor: pointer; }
+  .header__menu-mobile {
+    position: absolute;
+    width: 100%;
+    left: -2000px;
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out; }
+  .header__menu-icon svg {
+    color: #fff;
+    font-size: 16px;
+    margin: 0 10px;
+    cursor: pointer; }
+  .header__menu-icon {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    align-items: center; }
+  .header__contact {
+    position: fixed;
+    top: 0;
+    right: -405px;
+    width: 405px;
+    height: 100%;
+    min-height: 100%;
+    padding: 66px 65px 36px;
+    background-color: #0a090a;
+    text-align: left;
+    overflow: hidden;
+    visibility: hidden;
+    box-sizing: border-box;
+    box-shadow: -3px 0 3px #0000000a;
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+    z-index: 1001; }
+  .header__contact-close {
+    position: absolute;
+    top: 52px;
+    color: #ffb400;
+    z-index: 1002;
+    right: 50px;
+    font-size: 35px;
+    cursor: pointer;
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out; }
+    .header__contact-close:hover {
+      color: #c59d5f; }
+  .header__contact-logo {
+    margin: 45px 50px 95px 50px; }
+  .header__contact-search {
+    border: 1px solid #999;
+    height: 52px; }
+    .header__contact-search button,
+    .header__contact-search input {
+      background-color: transparent;
+      float: left;
+      line-height: 52px;
+      border: none;
+      color: #999; }
+    .header__contact-search button {
+      width: 50px;
+      padding: 0;
+      text-align: center;
+      cursor: pointer;
+      -webkit-transition: 0.3s ease-in-out;
+      -moz-transition: 0.3s ease-in-out;
+      transition: 0.3s ease-in-out; }
+      .header__contact-search button:hover {
+        color: #c59d5f; }
+    .header__contact-search input {
+      width: calc(100% - 50px);
+      padding: 0 0 0 20px; }
+  .header__contact-contact, .header__contact-follow {
+    padding-top: 50px;
+    text-align: center; }
+    .header__contact-contact h2, .header__contact-follow h2 {
+      font-size: 18px;
+      color: #fff; }
+    .header__contact-contact a, .header__contact-follow a {
+      color: #999; }
+      .header__contact-contact a:hover, .header__contact-follow a:hover {
+        color: #c59d5f; }
+  .header__contact-follow svg {
+    font-size: 20px;
+    margin: 20px 15px; }
 
-.menu__list ul ul {
-  left: 150px;
-  top: 0; }
+.shopping-bag-group {
+  position: relative; }
+  .shopping-bag-group span {
+    position: absolute;
+    top: -2px;
+    left: 19px;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: #fff;
+    color: #333132;
+    font-size: 11px;
+    line-height: 16px;
+    text-align: center; }
 
-.menu__list ul ul.a1 {
-  display: block; }
-
-.menu__list .menu_2nd {
-  display: flex;
-  justify-content: space-between; }
-  .menu__list .menu_2nd:hover, .menu__list .menu_2nd:hover a {
+.menu-main li.scroll > a {
+  color: #fff; }
+  .menu-main li.scroll > a:hover {
     color: #c59d5f; }
 
-.menu__list .menu_2nd::after {
-  content: "\f054";
-  font-family: "Font Awesome 5 Pro"; }
+.menu-main li {
+  float: left;
+  position: relative;
+  text-align: center;
+  width: 100px; }
+  .menu-main li a {
+    color: #999;
+    padding: 0px 12px 0px 12px;
+    line-height: 50px;
+    display: block;
+    font-size: 13px; }
+    .menu-main li a:hover {
+      color: #c59d5f; }
+  .menu-main li span {
+    position: absolute;
+    top: 0px;
+    left: 180px;
+    line-height: 50px; }
+    .menu-main li span:hover {
+      color: #c59d5f; }
 
-.header__bar {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  padding: 5px 0;
-  justify-content: space-between;
-  align-items: center; }
-  .header__bar svg {
-    font-size: 30px; }
-
-.header__mobile {
-  background-color: #000;
-  width: 100vw;
+.menu-main ul {
+  display: none;
+  flex-direction: column;
+  width: 200px;
   position: absolute;
-  padding: 10px;
-  top: 40px;
-  left: -2000px;
-  transition: 0.5s; }
-  .header__mobile .menu_2nd,
-  .header__mobile .menu_3td {
-    display: none; }
-  .header__mobile .menu_2nd {
-    padding-left: 10px; }
-  .header__mobile .menu_3td {
-    padding-left: 20px; }
+  background-color: #1e1e1ef2;
+  left: 24px; }
 
-.header__mobile-title {
-  text-align: center; }
-  .header__mobile-title p {
-    font-size: 20px;
+.menu-main ul a {
+  width: 200px;
+  text-align: start; }
+
+.menu-main ul ul {
+  display: none;
+  position: absolute;
+  flex-direction: column;
+  left: 200px;
+  top: 0; }
+
+.menu-main-mobile {
+  padding: 15px;
+  background-color: #000; }
+  .menu-main-mobile h1 {
+    color: #ffb400;
+    font-size: 22px;
     border-bottom: 1px solid #c59d5f; }
+  .menu-main-mobile a {
+    color: #999;
+    font-size: 16px; }
+  .menu-main-mobile li {
+    position: relative;
+    z-index: 10;
+    padding: 10px 0; }
+  .menu-main-mobile li span {
+    position: absolute;
+    left: 0;
+    z-index: 11;
+    padding-left: 100%; }
+
+.menu-main-mobile ul {
+  padding-left: 10px;
+  display: none; }
 
 .footer {
   text-align: center;
@@ -212,7 +269,8 @@ button:focus {
       padding: 5px 0 50px;
       font-size: 14px; }
     .footer .vintage__icon img {
-      padding: 0 10px; }
+      padding: 0 10px;
+      width: auto; }
   .footer span {
     font-size: 12px;
     color: #858485;
@@ -301,5 +359,8 @@ button:focus {
       font-family: "Font Awesome 5 Pro"; }
     .home-fresh button:hover {
       opacity: 0.8; }
+
+.home-contact {
+  margin-top: 500px; }
 
 /*# sourceMappingURL=style.css.map */
