fix header and contact

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@ input:focus,
 button:focus {
   outline: none; }
 
+#logo-home-2 {
+  display: none; }
+
 .header {
   background-color: #ffb400;
   position: fixed;
@@ -362,5 +365,14 @@ button:focus {
 
 .home-contact {
   margin-top: 500px; }
+  .home-contact h3 {
+    font-size: 16px;
+    color: #000; }
+
+.contact__info-top h1 {
+  font-size: 26px;
+  color: #000; }
+.contact__info-top p {
+  padding-bottom: 30px; }
 
 /*# sourceMappingURL=style.css.map */
