fix home, add contact, 404 page

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,74 @@
+@media (min-width: 426px) {
+  .home-wellcome .home-tabs a {
+    width: 33.33%;
+    text-align: center; } }
+@media (min-width: 481px) {
+  .home-filter__item {
+    width: 50%;
+    float: left;
+    padding: 0 10px; } }
+@media (min-width: 681px) {
+  .home-filter-inner {
+    padding: 30px 60px; }
+    .home-filter-inner .home-filter__item {
+      width: 33.333333%;
+      float: left;
+      padding: 0 10px; }
+    .home-filter-inner button {
+      width: calc(100% - 20px);
+      margin-left: 10px; }
 
+  .gallery-image__item {
+    width: 50%;
+    float: left; }
+
+  .page404 h1 {
+    font-size: 40px; }
+
+  .page404__search input,
+  .contact-newsletter input {
+    width: 500px; } }
+@media (min-width: 720px) {
+  .banner .banner__item-text p {
+    font-size: 17px; }
+  .banner .banner__item-text h1 {
+    font-size: 63px; } }
+@media (min-width: 1140px) {
+  .banner .banner__item-text p {
+    font-size: 20px; }
+  .banner .banner__item-text h1 {
+    font-size: 90px; } }
+@media (min-width: 1025px) {
+  .home-filter-inner {
+    margin-bottom: 0;
+    padding: 40px 60px; }
+    .home-filter-inner .home-filter__item {
+      width: 14%;
+      float: left;
+      padding: 0 2px; }
+    .home-filter-inner button {
+      width: 15%;
+      margin-left: 9px;
+      height: 42px;
+      line-height: 42px;
+      margin-top: 28px;
+      padding: 0; }
+
+  .gallery-image__item {
+    width: 33.333333%;
+    float: left; }
+
+  .gallery-image .grid-hover {
+    opacity: 0; } }
+@media (min-width: 1201px) {
+  .gallery-image__item {
+    width: 25%;
+    float: left; } }
+@media (max-width: 575px) {
+  .company {
+    padding-bottom: 15px; } }
+@media (max-width: 991px) {
+  .home-wellcome .home-tabs {
+    padding-top: 15px; } }
 
 /*# sourceMappingURL=responsive.css.map */
