--- a/css/style.scss
+++ b/css/style.scss
@@ -41,8 +41,13 @@ p {
   margin-bottom: 0;
 }
 input:focus,
-button:focus {
+button:focus,
+textarea:focus,
+.slick-slide:focus {
   outline: none;
+}
+label {
+  margin-bottom: 0;
 }
 
 // for header ---------------------------------->
@@ -273,7 +278,7 @@ button:focus {
   text-align: center;
   background-color: #333132;
   &__main {
-    padding: 115px 0 30px;
+    padding: 60px 0 30px;
     h2 {
       font-size: 18px;
       font-weight: 500;
@@ -383,7 +388,8 @@ button:focus {
   p {
     font-size: 18px;
     color: #fff;
-    margin: 20px 0 40px;
+    margin: 20px 30px 40px 30px;
+    text-align: justify;
   }
   button {
     background-color: $main-color;
@@ -403,7 +409,6 @@ button:focus {
 }
 
 .home-contact {
-  margin-top: 500px;
   h3 {
     font-size: 16px;
     color: #000;
@@ -416,5 +421,344 @@ button:focus {
   }
   p {
     padding-bottom: 30px;
+  }
+}
+.contact__info-bottom {
+  padding: 30px 0;
+  svg {
+    color: #999;
+    margin-right: 15px;
+    &:hover {
+      color: $hover-color;
+    }
+  }
+}
+.form-contact {
+  padding-bottom: 30px;
+  input,
+  textarea {
+    width: 100%;
+    padding-left: 10px;
+    margin-bottom: 15px;
+    @include border-color();
+    color: #999;
+  }
+  input {
+    height: 56px;
+  }
+  textarea {
+    height: 100px;
+  }
+  button {
+    background-color: $main-color;
+    color: #fff;
+    padding: 10px 25px;
+    border: none;
+    font-size: 12px;
+    letter-spacing: 1px;
+    @include transition();
+    width: 100%;
+    &:hover {
+      background-color: $hover-color;
+    }
+  }
+  label.error {
+    @include error-validate();
+  }
+}
+
+// for home image mxh
+.home-mxh {
+  padding-bottom: 70px;
+  .remove-padding {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  img {
+    width: 100%;
+  }
+}
+
+// for home wellcome
+.home-wellcome {
+  background-image: url(../images/wellcome.jpg);
+  background-position: center;
+  object-fit: cover;
+  padding: 70px 0;
+  h2 {
+    font-size: 35px;
+    color: #000;
+  }
+  p {
+    text-align: justify;
+  }
+  .home-tabs {
+    a {
+      width: 100%;
+      padding: 10px 20px;
+      background-color: #f7f7f7;
+      font-size: 13px;
+      color: #999;
+      margin: 3px 0;
+    }
+    a.active {
+      background-color: $main-color;
+      color: #fff;
+    }
+    .nav-tabs {
+      border-bottom: none;
+    }
+  }
+}
+
+// for home testimonial
+.home-testimonial {
+  background-image: url(../images/testimonial/testimonial-bg.jpeg);
+  padding: 40px 0;
+  text-align: center;
+  h1 {
+    color: #fff;
+    font-size: 42px;
+  }
+  p {
+    font-size: 18px;
+    color: #fff;
+  }
+}
+.testimonial {
+  padding-top: 50px;
+  &__item {
+    background-color: #fff;
+    padding: 40px 45px 56px 55px;
+    margin: 0 5px;
+  }
+  &__desc {
+    p {
+      color: #999;
+      font-size: 15px;
+      text-align: start;
+    }
+  }
+  &__person {
+    padding-top: 20px;
+  }
+  &__person-image,
+  &__person-author {
+    width: auto;
+    display: table-cell;
+    vertical-align: middle;
+  }
+  &__person-author {
+    padding-left: 15px;
+    text-align: left;
+    h5 {
+      color: #000;
+      font-size: 16px;
+    }
+    h6 {
+      position: relative;
+      display: block;
+      padding-top: 7px;
+      margin: 7px 0 0;
+      color: #999;
+      &::after {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 1px;
+        width: 50px;
+        height: 1px;
+        background-color: #1e1e1e;
+      }
+    }
+  }
+}
+
+// for introduce your style
+.introduce {
+  padding: 50px 0;
+  &__title {
+    h3 {
+      font-size: 25px;
+      color: #000;
+      line-height: 40px;
+      position: relative;
+      &::after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        content: "";
+        width: 100px;
+        height: 2px;
+        background-color: $main-color;
+      }
+    }
+  }
+  &__desc {
+    padding-top: 15px;
+  }
+}
+
+// for masonry
+.grid-item,
+.grid-item-2 {
+  position: relative;
+  cursor: pointer;
+}
+.grid-item {
+  width: 25%;
+  &:hover .grid-hover {
+    opacity: 1;
+  }
+}
+.grid-item-2 {
+  width: 50%;
+  &:hover .grid-hover {
+    opacity: 1;
+  }
+}
+.grid-hover {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  padding: 20px;
+  text-align: center;
+  background-color: #1e1e1e66;
+  @include transition();
+  opacity: 0;
+  .grid-hover__text {
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    left: 50%;
+    h3,
+    a {
+      color: #fff;
+    }
+    h3 {
+      font-size: 16px;
+    }
+    a {
+      font-style: italic;
+      @include transition();
+      font-size: 14px;
+      &:hover {
+        color: $hover-color;
+      }
+    }
+  }
+}
+
+// for home icons group
+.home__icon {
+  text-align: center;
+  padding: 30px 15px;
+  img {
+    width: 112px;
+    padding-bottom: 15px;
+  }
+  h2 {
+    font-size: 16px;
+    line-height: 19px;
+    color: #000;
+  }
+  p {
+    font-size: 15px;
+  }
+}
+.home__icon-line {
+  display: inline-block;
+  vertical-align: middle;
+  width: 60px;
+  height: 1px;
+  margin: 2px 0 0;
+  background-color: #1e1e1e;
+}
+
+// for home filter
+.home-filter-inner {
+  padding: 30px;
+  margin-bottom: 30px;
+  button {
+    width: 100%;
+    padding: 10px 25px;
+    background-color: $main-color;
+    color: #fff;
+    border: none;
+    margin-top: 15px;
+    &:hover {
+      background-color: $hover-color;
+    }
+  }
+}
+.home-filter {
+  &__item {
+    // text-align: center;
+    padding-bottom: 10px;
+    span {
+      position: relative;
+      width: 100%;
+      label {
+        color: #999;
+        font-size: 11px;
+        text-transform: uppercase;
+      }
+      input,
+      select {
+        height: 42px;
+        padding: 0 0 0 15px;
+        line-height: 42px;
+        border: 1px solid #d0d0d0;
+        width: 100%;
+        color: #999;
+        font-size: 14px;
+      }
+    }
+    span.has-calendar::after {
+      position: absolute;
+      bottom: -3px;
+      right: 11px;
+      font-family: "Font Awesome 5 Pro";
+      z-index: 0;
+      content: "\f073";
+      font-size: 20px;
+      color: $main-color;
+    }
+  }
+}
+
+// for banner
+.banner {
+  &__item {
+    position: relative;
+    img {
+      width: auto;
+    }
+  }
+  &__item-text {
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+
+    h1 {
+      font-family: "Pacifico", cursive;
+      font-size: 39px;
+    }
+  }
+  .slick-next {
+    right: 100px;
+  }
+  .slick-prev {
+    left: 100px;
+  }
+  .slick-prev:before,
+  .slick-next:before {
+    font-size: 50px;
   }
 }
