--- a/css/about.scss
+++ b/css/about.scss
@@ -236,7 +236,7 @@
     padding-top: 15px;
   }
   &__list {
-    padding-bottom: 30px;
+    padding: 20px 0;
     h1 {
       font-size: 16px;
       line-height: 20px;
@@ -279,7 +279,7 @@
     -webkit-animation: spanIllustrator 4s;
     -o-animation: spanIllustrator 4s;
     position: absolute;
-    left: 428px;
+    left: 75%;
   }
   span#photoshop {
     animation: spanPhotoshop 4s;
@@ -333,7 +333,7 @@
     left: 0;
   }
   100% {
-    left: 428px;
+    left: 75%;
   }
 }
 
@@ -342,7 +342,7 @@
     left: 0;
   }
   100% {
-    left: 428px;
+    left: 75%;
   }
 }
 
@@ -351,7 +351,7 @@
     left: 0;
   }
   100% {
-    left: 428px;
+    left: 75%;
   }
 }
 
@@ -360,7 +360,7 @@
     left: 0;
   }
   100% {
-    left: 428px;
+    left: 75%;
   }
 }
 
