--- a/css/responsive.css
+++ b/css/responsive.css
@@ -89,6 +89,9 @@
 @media (max-width: 575px) {
   .company {
     padding-bottom: 15px; } }
+@media (max-width: 767px) {
+  .cake__position img {
+    width: 100%; } }
 @media (max-width: 991px) {
   .home-wellcome .home-tabs {
     padding-top: 15px; } }
