add blog detail page

--- a/css/roomsList.scss
+++ b/css/roomsList.scss
@@ -84,6 +84,7 @@
 .rooms-filter {
   background-color: #333132;
   padding-bottom: 20px;
+  margin-top: 67px;
   h1 {
     padding: 27px 0;
     margin: 0 0 19px;
