--- a/css/roomsList.css
+++ b/css/roomsList.css
@@ -77,7 +77,8 @@
 
 .rooms-filter {
   background-color: #333132;
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  margin-top: 67px; }
   .rooms-filter h1 {
     padding: 27px 0;
     margin: 0 0 19px;
